<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescription" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLanguage" />

    <TextView
        android:text="@string/Star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStars"
        android:layout_weight="10"
        android:textColor="@android:color/holo_orange_light" />

    <TextView
        android:text="@string/created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCreated" />

    <TextView
        android:text="@string/updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUpdated"
        />


</LinearLayout>
